Adiciona favicon e hover as imagens

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<link rel="shortcut icon" href="images/favicon.ico" />
 	<title>Ratatouille</title>
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900|Ubuntu" rel="stylesheet">
